# Whatsapp-Competitive-Programming-Assistant

./: README.md
competitive-programming-assistant/: config.py  conversation_manager.py  gemini_bridge.py  gemini_tool_definitions.py  main.py  mcp_instance.py  pyproject.toml  render.yaml  requirements.txt  server.py  web_main.py  whatsapp_mcp_bridge.py
competitive-programming-assistant/api_clients/: base_client.py  clist.py  codeforces.py  leetcode.py
competitive-programming-assistant/tools/: about.py  codeforces_tools.py  contest_tools.py  graphing_tools.py  leetcode_tools.py  models.py
